syntax = "proto3";

option go_package =".;service";
message RequestVoteArgs {
  int32 term = 1;
  int32 candidateId = 2;
  int32 lastLogIndex = 3;
  int32 LastLogTerm = 4;
  int32 memberindex = 5;
}

message RequestVoteReply {
  int32 term = 1;
  bool voteGranted = 2;
}

message AppendEntriesArgs {
  int32 term = 1;
  int32 leaderId = 2;
  int32 prevLogIndex = 3;
  int32 prevLogTerm = 4;
  bytes entries = 5;
  int32 leaderCommit = 6;
  bool typeOp = 7;
  int32 flag = 8;
  int64 times = 9;
  string ip = 10;
}

message AppendEntriesReply {
  int32 term = 1;
  bool success = 2;
  //int32 conflictIndex = 3;
  //int32 conflictTerm = 4;
}

service Raft {
  rpc RequestVote(RequestVoteArgs) returns (RequestVoteReply);
  rpc AppendEntries(AppendEntriesArgs) returns (AppendEntriesReply);
  rpc CopyData(AppendEntriesArgs) returns (AppendEntriesReply);
}